# RM2022_num_dis

./: README.md  git_force_pull.sh
ballistic/: CMakeLists.txt  package.xml
ballistic/scripts/: compile.sh  exp_com.py  main.py
img_displayer/: CMakeLists.txt  package.xml
img_displayer/src/: img_displayer.cpp
mv_driver/: CMakeLists.txt
mv_driver/src/: MVCamera_node.cpp
numPred/: CMakeLists.txt  package.xml
numPred/scripts/: numPred_node.py  whichNumber.py  xml2txt.py
num_dis/: CMakeLists.txt  package.xml
num_dis/src/: num_dis.cpp
scripts/: launch_test  remote.sh  ros-rm-launch.sh  ros-rm-launch_local.sh
serial_common/: CMakeLists.txt
serial_common/include/: Serial_common_config.h
serial_common/launch/: serial_common.launch
serial_common/msg/: serialWrite.msg
serial_common/src/: serial_common.cpp
video_pub/src/: video_pub.cpp
windMill/: CMakeLists.txt  package.xml
windMill/cfg/: params.yaml  params_old.yaml
windMill/include/: CameraApi.h  CameraDefine.h  CameraStatus.h  MVCamera.h  MarkerParams.h  MarkerSensor.h  dafu_detect.h  timer.h  utils.h  videosaver.h
windMill/launch/: MV_cam.launch  MV_cam_angle.launch  MV_cam_remote.launch  dbg_save.launch  ros_rm_launch.sh  ros_rm_launch_TX2.sh  video_test.launch
windMill/src/: MarkSensor.cpp  MarkerParams.cpp  code_backup  dafu_detect.cpp  main.cpp
